Quorum3/Library/Tests/TypeChecker/Pass/TextIsEmpty.quorum
class Main
    action Main
        Text t 
        t:SetValue("")
        text p = ""

        output t:IsEmpty()
        output p:IsEmpty()
    end
end