Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignTextObjBooleanWrapped.quorum
class main
    action main
        Text t = true
    end
end